# st-corr-net

./: .gitignore  Africa_HIV.ipynb  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
st_corr_net/: __init__.py  dataset.py  features.py  plots.py
st_corr_net/modeling/: predict.py  train.py
