[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "st_corr_net"
version = "0.0.1"
description = "A graph-based methodology for evaluating and refining the spatial neighbour matrix used in spatial-temporal data analysis. Done as part of the curriculum unit Time and Spatial Econometrics (April\u2013June 2024)."
authors = [
  { name = "Pedro Caio" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["st_corr_net"]
include = ["pyproject.toml", "st_corr_net/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["st_corr_net"]
force-sort-within-sections = true

